<resources>
    <string name="app_name">ISW Pay App</string>
    <string name="app_name_caritas">Caritas MFB</string>
    <string name="app_name_sidian">Sidian Bank</string>
    <string name="app_name_consolidated">Consolidated Bank</string>
    <string name="app_name_baroda">Bank of Baroda</string>
    <string name="app_name_family_bank">Family Bank</string>
    <string name="action_settings">Settings</string>
    <string name="home_fragment_label">Home</string>
    <string name="payment_fragment_label">Purchase</string>
    <string name="transaction_index">POS Purchase</string>
    <string name="processing_transaction">Please wait..</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="report">Report</string>
    <string name="back_button">Back</string>
    <string name="cancel_button">Cancel</string>
    <string name="purchase_goods">Purchase Goods</string>
    <string name="enter_amountt">Enter Amount</string>
    <string name="currency_symbol"></string>
    <string name="tap_card_to_pay">Tap Card to Pay</string>
    <string name="enter_amount_first">Enter Amount First</string>
    <string name="exit_transaction">Exit Transaction</string>
    <string name="exit_transaction_message">Are you sure you want to exit? Any transaction in progress will be cancelled.</string>
    <string name="yess">Yes</string>
    <string name="noo">No</string>
    <string name="cancel_transaction">Cancel Transaction</string>
    <string name="cancel_transaction_message">Are you sure you want to cancel the transaction?</string>
    <string name="invalid_amount">Please enter a valid amount greater than 0.00</string>
    <string name="transaction_initialization_failed">Failed to initialize transaction. Please try again.</string>
    <string name="transaction_reversal">Transaction Reversal</string>
    <string name="original_stan">Original STAN</string>
    <string name="enter_stan">Enter STAN</string>
    <string name="original_auth_id">Original Auth ID</string>
    <string name="enter_auth_id">Enter Auth ID</string>
    <string name="amount_to_reverse">Amount to Reverse</string>
    <string name="process_reversal">Process Reversal</string>
    <string name="reversal_note">Enter the original STAN, Auth ID, and amount to process the reversal. This will cancel the original transaction.</string>
    <string name="backk">Back</string>
    <string name="cancell">Cancel</string>
    <string name="exit_reversal">Exit Reversal</string>
    <string name="exit_reversal_message">Are you sure you want to exit? The reversal process will be cancelled.</string>
    <string name="cancel_reversal_message">Are you sure you want to cancel the reversal?</string>
    <string name="reversal_successful">Reversal processed successfully</string>
    <string name="reversal_failed">Reversal failed</string>
    <string name="processing_reversal">Processing reversal...</string>
    <string name="invalid_input_fields">Please fill in all required fields</string>
    <string name="fill_all_fields">Fill All Fields</string>
    <string name="payment_processor_not_initialized">Not initialized</string>
    <string name="welcome_message">Welcome, %1$s</string>
    <string name="pin_select">PIN Select</string>
    <string name="settings">Settings</string>
    <string name="fuel_pay">Fuel Pay</string>
    <string name="logout">Logout</string>
    <string name="session_timeout_message">Timeout</string>
    <string name="session_timeout_title">Session Timeout</string>
    <string name="confirm_logout_title">Logout Confirmation</string>
    <string name="confirm_logout_message">Are you sure you want to log out?</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="navigation_error">Action not available</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="print_test">Print Test</string>
    <string name="printer_version">Printer Version：</string>
    <string name="bar_code">Barcode:</string>
    <string name="print_bar_code">Print Barcode</string>
    <string name="D_bar_code">Qrcode:</string>
    <string name="print_2D_barcode">Print Qrcode</string>
    <string name="walk_paper_lines">Walk Paper Lines:</string>
    <string name="walk_paper_test">Walk Paper</string>
    <string name="left_margin">Left Margin:</string>
    <string name="right_margin">Right Margin</string>
    <string name="row_space">Row Space:</string>
    <string name="font_size">Font Size：</string>
    <string name="gray_level">Gray Level:</string>
    <string name="print_content">Print Content：</string>
    <string name="chinese_example">ZH Example</string>
    <string name="english_example">EN Example</string>
    <string name="fr_example">FR Example</string>
    <string name="clear_text">Clear</string>
    <string name="print_text">Print Text</string>
    <string name="printing_wait">Printing, please wait……</string>
    <string name="D_barcode_loading">Qrcode loading</string>
    <string name="generate_barcode_wait">Generating barcode, please wait……</string>
    <string name="input_print_data">Please input print data</string>
    <string name="maker_search_distance">Walk Paper For Search Black Block:</string>
    <string name="maker_walk_distance">Walk Paper After Haved Search:</string>
    <string name="maker_walk_distance_range">(0-255)</string>
    <string name="maker">Black Block Detection</string>
    <string name="maker_error">maker input value not fit</string>
    <string name="maker_not_find">Cannot Find Black Block</string>
    <string name="papercut">Paper Cut</string>
    <string name="walk_paper_intput_value">walk paper intput value not fit</string>
    <string name="print_picture">Print Picture</string>
    <string name="sure">sure</string>
    <string name="not_find_picture">not find picture</string>
    <string name="input_command">Please Input Command</string>
    <string name="execute_command">Execute Command</string>
    <string name="watting">Please wait while checking driver version</string>
    <string name="noPaper">No paper</string>
    <string name="noPaperNotice">No paper, please put paper in and retry</string>
    <string name="LowBattery">Low battery, please connect the charger!</string>
    <string name="overTemp">over temp !</string>
    <string name="ptintInit">Printer initialing... Please try again after a few seconds.</string>
    <string name="outOfLeft">Beyond the left margin！</string>
    <string name="outOfLine">Beyond the row space！</string>
    <string name="outOfFont">Beyond the font size！</string>
    <string name="outOfGray">Beyond the gray level！</string>
    <string name="outOfCharSpace">Beyond The Char Space！</string>
    <string name="empty">The content is empty！</string>
    <string name="lengthNotEnougth">The length is not enough！</string>
    <string name="index_text">Print Text</string>
    <string name="index_pic">Picture/Qrcode</string>
    <string name="index_comm">Print Command</string>
    <string name="input_content">input content</string>
    <string name="dialog_comfirm">ConFirm</string>
    <string name="operation_result">Result</string>
    <string name="bl_dy">Print</string>
    <string name="print_waring">Tip: If the SDK provides the function of can not meet your printing needs, you can send the print instruction way for implementation</string>
    <string name="printer_type_common">SerialPort Printer</string>
    <string name="printer_type_usb">USB Printer</string>
    <string name="printer_type_select">Select Printer Type</string>
    <string name="qrcode_verify">Qrcode</string>
    <string name="magnetic_card_test">Magnetic Card</string>
    <string name="track1">Track1</string>
    <string name="track2">Track2</string>
    <string name="track3">Track3</string>
    <string name="read_card">Swipe Card</string>
    <string name="quit">quit</string>
    <string name="error_open_magnetic_card">Could not open magnetic card device</string>
    <string name="error">Error</string>
    <string name="rfid_test">RFID Test</string>
    <string name="operation_fail">Operation failed</string>
    <string name="init_card">Initialize</string>
    <string name="query">Query</string>
    <string name="consume">Consume</string>
    <string name="recharge">Charge</string>
    <string name="opening">Connecting card reader</string>
    <string name="operating">Processing</string>
    <string name="operation_succss">Operate Success</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="input_init_amount">Please input amount</string>
    <string name="input_consume_amount">Please input amount</string>
    <string name="input_recharge_amount">Please input amount</string>
    <string name="balance">Blance</string>
    <string name="no_enough_balance">Insufficient Balance</string>
    <string name="input_amount">Input amount</string>
    <string name="cpu_card_test">Cpu Card Test</string>
    <string name="check_version">Please wait while checking driver version</string>
    <string name="get_rfid_sn">Get Card Information</string>
    <string name="m1_card_test">M1 Card Test</string>
    <string name="ul_card_test">Ultralight Card Test</string>
    <string name="card_sn">Card number is:</string>
    <string name="ul_read_card">Read Card</string>
    <string name="ul_write_card">Write Card</string>
    <string name="read_succss">Read Success</string>
    <string name="write_succss">Write Success</string>
    <string name="cpucard_send_apdu_command">Send APDU Command</string>
    <string name="identity_test">ID Card Test</string>
    <string name="bl_xsdxx">Displayed Info:</string>
    <string name="idcard_czz">Proceeding...</string>
    <string name="idcard_ljdkq">Connecting to ID reader...</string>
    <string name="idcard_ljdkqcg">Connect reader success</string>
    <string name="idcard_wfljdkq">Connect reader failed</string>
    <string name="idcard_dqsbhcs">Read failed or time out</string>
    <string name="idcard_xm">Name:</string>
    <string name="idcard_xb">Gender:</string>
    <string name="idcard_mz">Nation:</string>
    <string name="idcard_csrq">Birthday:</string>
    <string name="idcard_dz">Address:</string>
    <string name="idcard_sfhm">ID：</string>
    <string name="idcard_qzjg">Issuing authority：</string>
    <string name="idcard_yxqx">"Exp date: "</string>
    <string name="idcard_hqsfzxx">Get ID card information</string>
    <string name="idcard_xzgn">Select function</string>
    <string name="idcard_xzsfsbfs">Please choose a mode for ID identification</string>
    <string name="idcard_sxtsb">Identification by camera OCR</string>
    <string name="idcard_dkqsb">"Identification by card reader"</string>
    <string name="select_show_head_photo">whether show head photo</string>
    <string name="select_show_head_photo_true">true</string>
    <string name="select_show_head_photo_false">false</string>
    <string name="get_id_front_fail">Failure to obtain positive information card</string>
    <string name="get_id_front_success">Successfully obtain identity cards positive messages</string>
    <string name="get_id_back_fail">Negative information failed to obtain ID cards</string>
    <string name="get_id_back_success">Successfully obtain identity cards negative information</string>
    <string name="menu_preauth">PRE-AUTH</string>
    <string name="menu_authcomp">AUTH COMPLETE</string>
    <string name="sale_inputAmount">Please input amount</string>
    <string name="void_ostan">Please input STAN</string>
    <string name="void_oauth">Please input AUTHID</string>
    <string name="sale_click_useCard">Click &amp; use card</string>
    <string name="send_receipt">Print Receipt</string>
</resources>