<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AuthComplete">
    <!-- Title Bar -->
    <include layout="@layout/titlebar" />
    <!-- Header TextView -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_authcomp"
        android:textSize="30sp"
        android:background="#15479c"
        android:textColor="#a1a1a1"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="1dp" />

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Original STAN -->
        <TextView
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/void_ostan"
            android:textSize="20sp"
            android:layout_marginTop="1dp" />

        <EditText
            android:id="@+id/ostan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:gravity="center_vertical|end"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLength="13"
            android:textColor="#000000"
            android:text="" />

        <!-- Original Auth ID -->
        <TextView
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/void_oauth"
            android:textSize="20sp"
            android:layout_marginTop="1dp" />

        <EditText
            android:id="@+id/oauth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:gravity="center_vertical|end"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLength="13"
            android:textColor="#000000"
            android:text="" />

        <!-- Sale Input Amount -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_inputAmount"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/inputAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:gravity="center_vertical|end"
            android:textSize="20sp"
            android:inputType="number"
            android:maxLength="13"
            android:textColor="#000000"
            android:text="0.00" />

        <Button
            android:id="@+id/btn_saleStart"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_number_violet_shape"
            android:text="@string/sale_click_useCard"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <!-- Button -->
    </LinearLayout>

</LinearLayout>
    <!--</FrameLayout>-->
